# renderer

./: CMakeLists.txt  README.md
OpenGL/: CMakeLists.txt  ExampleTriangles.h  GLSL.cpp  GLSL.h  fragmentShader_passthrough.glsl  fragmentShader_perVertex.glsl  glfwExample.cpp  vertexShader_passthrough.glsl  vertexShader_perVertexColor.glsl  vertexShader_perVertexLambertianShading.glsl  vertexShader_perVertexNormalShading.glsl
Vulkan/: CMakeLists.txt  basicCode.cpp
examples/: CMakeLists.txt  OBJMesh_LoadSample.cpp  SceneDataTypes.h  SceneFile_Instancer.cpp  SceneFile_Instancer.h  boost_Timer.cpp  genRandomVals.cpp  sphereTest.cpp  test_JSONSceneParse.cpp  test_Timer.cpp  test_XMLSceneParse.cpp  test_pngWrite.cpp  test_readPNGFile.cpp
renderer/: AABoundingBox.cpp  AABoundingBox.h  AreaLight.cpp  AreaLight.h  BVHNode.cpp  BVHNode.h  BlinnPhongMirroredShader.cpp  BlinnPhongMirroredShader.h  BlinnPhongShader.cpp  BlinnPhongShader.h  Box.cpp  Box.h  CMakeLists.txt  Camera.cpp  Camera.h  CoordSys.cpp  CoordSys.h  DiffuseShader.cpp  DiffuseShader.h  Framebuffer.cpp  Framebuffer.h  GlazeShader.cpp  GlazeShader.h  HitStructure.cpp  HitStructure.h  InstancedObject.cpp  InstancedObject.h  LambertianShader.cpp  LambertianShader.h  Light.cpp  Light.h  Mesh.cpp  Mesh.h  MirrorShader.cpp  MirrorShader.h  NormalShader.cpp  NormalShader.h  OBJMesh.cpp  OBJMesh.h  OrthographicCamera.cpp  (+40 more)
scenes/: README.md
scenes/scenes_A/: CornellRoom_wMirroredSpheres.xml  PhongExp.json  boxSphereTest.json  diffuseScene.json  diffuseScene_red.json  diffuseScene_twoSpheresOneLight.json  khalverson_2012.json  lambertianChalkSpheres.json  mirrorScene00.json  mirrorScene00.xml  mirrorScene00_wAreaLight.json  mirrorScene01.json  mirrorScene01.xml  mirroredScene.json  mirroredScene.xml  oneBox.json  oneSphere.json  oneTriangle.json  simpleSphereScene.json  simpleSphereScene.xml  simpleSphereScene_GlazedFloor.xml  simpleSphereScene_MirroredFloor.xml  spheresAndTriangles.json  spheres_1K.json  threeBoxes.json  threeTriangles.json
scenes/scenes_B/: CornellBox_Dielectric.json  CornellBox_Specular.json  LittleOfEverything.json  StanfordBunny.json  StanfordDragon.json  StanfordDragon_Instanced.json  areaLight.json  buddha.json  dielectric_Sphere.json  dielectric_Test00.xml  dielectric_dragon.json  dielectric_dragon.xml  diffuseScene_multipleSpheres.json  dragons00.json  earth.json  emitterTest.json  emitterTest_OBJ.json  environmentMappedScene.json  glazeTest.json  glazeTest.xml  glossinessTest.xml  glossyReflection.json  happyBuddha_100K.json  happyBuddha_CoolToWarm.json  marbles00.json  marbles01.json  metallicDragons.json  metallicDragons.xml  oneOBJ_Al.json  rowOfBunnys.json  solarSystem.json  texture_box.json  texture_sphere.json  threeEggs.json  threeEggs_SoftShadows.xml  threeOBJS_CooltoWarm.json
scenes_custom/: PhongExp.json  PhongExpThreeLights.json  PhongExpTwoLights.json  areaLight.json  areaLight_birdseye.json  areaLight_visibiltytest.json  glazeBPMTest.json  glazeBPMTestPointLights.json  glazeTest.json  glazeTestPointLights.json  gridOfBunniculas.json  gridOfBunniculasGlaze.json  gridOfBunniculasGlaze_ortho.json  gridOfBunniculas_ortho.json  gridOfBunnies.json  gridOfBunniesGlaze.json  gridOfBunniesGlaze_MaxChaos.json  gridOfBunniesGlaze_nomirror.json  gridOfBunnies_nomirror.json  monsterSphereScene01.json  monsterSphereScene02.json  monsterSphereScene_debug.json  oneEgg.json  oneSphere.json  oneSphereMultiLights.json  oneSphereMulticoloredLights.json  readme.txt  rowOfBunnys_notex.json  spheres_1K_GlazeBPM.json  threeSpheresMultiLight.json  twoSpheres.json
src/: ArgumentParsing.cpp  ArgumentParsing.h  CMakeLists.txt  Random.cpp  Random.h  Timer.h  Vector3D.cpp  Vector3D.h  XMLSceneParser.h  handleGraphicsArgs.cpp  handleGraphicsArgs.h  jsonSceneParser.cpp  jsonSceneParser.h  model_obj.cpp
src/png++/: error.hpp
utests/: CMakeLists.txt  utest_Vector3D.cpp
utils/: Vector3D.cpp  Vector3D.h  main.cpp  utils.vcxproj
