
add_library (sive-util
  ArgumentParsing.cpp ArgumentParsing.h
  handleGraphicsArgs.cpp handleGraphicsArgs.h
  jsonSceneParser.cpp jsonSceneParser.h
  model_obj.cpp model_obj.h
  Random.cpp Random.h
  SceneDataContainer.h
  Timer.cpp Timer.h
  Vector3D.cpp Vector3D.h
  XMLSceneParser.h XMLSceneParser.cpp
)

